# SkeeterHawk

./: .gitignore  Makefile  PROJECT_STRUCTURE.md  README.md  TOOLS_AND_UTILITIES.md
firmware/: CMakeLists.txt  README.md
firmware/Inc/: calibration.h  config.h  data_logger.h  dfsdm_mic.h  guidance.h  main.h  signal_utils.h  sonar.h  stm32h7xx_it.h  ultrasonic_tx.h
firmware/Src/: calibration.c  config.c  data_logger.c  dfsdm_mic.c  guidance.c  main.c  signal_utils.c  sonar.c  stm32h7xx_it.c  system_stm32h7xx.c  ultrasonic_tx.c
hardware/: README.md
simulation/: README.md  analysis_tools.py  requirements.txt  sonar_sim.py  test_suite.py
